# zero2prod

./: Cargo.toml  Dockerfile  README.md
.sqlx/: query-1c3b2c50575b5092bfff7a52a123af7811abf56c30502a03ac4862ec85758e81.json
configuration/: base.yaml  production.yaml
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscription.rs
tests/: health_check.rs
