[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
sqlx = {version = "0.7", default-features=false, features=["runtime-tokio-rustls","macros","postgres","uuid","chrono","migrate"]}
config = "0.14"

[dev-dependencies]
reqwest = "0.12.4"
