[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
sqlx = {version = "0.6", default-features=false, features=["runtime-tokio-rustls","macros","postgres","uuid","chrono","migrate"]}
config = "0.14"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = { version = "0.4.38",default-features=false, features = ["clock"] }

[dev-dependencies]
reqwest = {version="0.12.4",features =["json"]}
