[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
sqlx = {version = "0.6", default-features=false, features=["runtime-tokio-rustls","macros","postgres","uuid","chrono","migrate"]}
config = "0.14"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = { version = "0.4.38",default-features=false, features = ["clock"] }
env_logger = "0.11.3"
log = "0.4.21"
tracing = {version="0.1.40", features = ["log"]}
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"

[dev-dependencies]
reqwest = {version="0.12.4",features =["json"]}
